--- a/B4.PE1.DellobelI/B4.PE1.DellobelI/PictureGallery.xaml
+++ b/B4.PE1.DellobelI/B4.PE1.DellobelI/PictureGallery.xaml
@@ -16,7 +16,7 @@
                 <Setter Property="BackgroundColor" Value="Black"/>
                 <Setter Property="Margin" Value="1" />
                 <Setter Property="HorizontalOptions" Value="Center"/>
-                <Setter Property="Aspect" Value="AspectFit" />
+                <Setter Property="Aspect" Value="AspectFill" />
                 <Setter Property="HeightRequest" Value="150" />
             </Style>
         </ResourceDictionary>
